# rlog

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.MD  pyproject.toml  setup.py
examples/: auto_format.py  many_loggers.py  simple.py
rlog/: __init__.py  exception_handling.py  filters.py  formatters.py  handlers.py  metrics.py  rlogger.py
tests/: test_filters.py  test_rlogger.py  test_time_filter.py
