[project]
name = "rlog"
version = "0.3.7"
description = "A simple logger for reinforcement learning."
authors = [{ name = "Florin Gogianu", email = "florin.gogianu@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["logging", "machine learning", "reinforcement learning"]
requires-python = ">=3.6"
dependencies = [
    "termcolor>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/floringogianu/rlog"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "pytest>=8.0.0",
    "ruff>=0.12.2",
]
play = [
    "ipython>=9.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff.lint]
# pycodestyle, Pyflakes, pyupgrade, flake8-bugbear, flake8-simplify, isort,
select = [ "E", "F", "UP", "B", "SIM", "I" ]
ignore = [
  "UP032",  # use f-string instead of `format` call
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.7"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true
